# airflow-orchestration

./: .gitignore  README.md  pyproject.toml  start_airflow.sh  start_airflow_standalone.sh  stop_airflow.sh
airflow_home/: airflow.cfg
dags/: branching_taskapi_dags.py  custom.py  custom_taskflow_dag.py  custom_xcom_dags.py  custom_xcom_taskflow_dags.py  hello_world_dag.py  pipeline_with_sql_sensor.py  pipelnie_with_postgres_hook.py  postgres_pipeline_dags.py  simple_file_sensor.py  sqllite_taskapi_dags.py
datasets/: car_data.csv  my_sqlite.db
output/: two_seaters.csv
sql_statements/: create_table_customer_purchases.sql  create_table_customers.sql  insert_customer_purchases.sql  insert_customers.sql  joining_table.sql
terraform/: README.md  main.tf  terraform.tf  variables.tf
terraform/set_aws_iam/: main.tf
