[project]
name = "airflow-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.0.0,<4.0.0",
    "graphviz>=0.20.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "pyarrow==15.0.2",
    "sqlalchemy>=1.4.49,<2.0",
    "apache-airflow-providers-postgres>=6.2.0",
]
